package rpc;


message GetRequest {
    optional uint32 player = 1;
    optional string name = 2;
}

message GetReply {
    optional string result = 1;
}